plugins {
    id 'java'
}

group 'ru.hw'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.5.2'
    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2'
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
}

task(benchmark, dependsOn: 'classes', type: JavaExec) {
    main = 'ru.hw.random.benchmark.Benchmark'
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs += ['-verbose:gc', '-XX:+TieredCompilation', '-Xms3096m']
//    args 'mrhaki'
//    systemProperty 'simple.message', 'Hello '
}
